force-app/main/default/objects/Acompanante__c/Acompanante__c.object-meta.xml
<CustomObject>
    <label>Acompanante</label>
    <nameField>
        <displayFormat>Ac-{0000}</displayFormat>
        <label>Acompaname</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acompanantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>