force-app/main/default/objects/Acompanante__c/fields/EV_Accionista__c.field-meta.xml
<CustomField>
    <fullName>EV_Accionista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente/Accionista</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cliente/Accionista</relationshipLabel>
    <relationshipName>Acompanantes</relationshipName>
    <type>Lookup</type>
</CustomField>