force-app/main/default/objects/Acompanante__c/fields/EV_AccionistaLead__c.field-meta.xml
<CustomField>
    <fullName>EV_AccionistaLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Acompañantes</relationshipLabel>
    <relationshipName>Acompanantes_del</relationshipName>
    <type>Lookup</type>
</CustomField>