force-app/main/default/objects/Acompanante__c/fields/EV_LeadAcompanante__c.field-meta.xml
<CustomField>
    <fullName>EV_LeadAcompanante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Acompanante</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead principal</relationshipLabel>
    <relationshipName>Acompanantes1</relationshipName>
    <type>Lookup</type>
</CustomField>