force-app/main/default/objects/Acompanante__c/fields/EV_LeadPrincipal__c.field-meta.xml
<CustomField>
    <fullName>EV_LeadPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Principal</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Acompanantes</relationshipLabel>
    <relationshipName>Acompanantes</relationshipName>
    <type>Lookup</type>
</CustomField>