force-app/main/default/objects/Acompanante__c/recordTypes/EV_Accionistas.recordType-meta.xml
<RecordType>
    <fullName>EV_Accionistas</fullName>
    <active>true</active>
    <description>Acompañantes de accionistas</description>
    <label>Accionistas</label>
</RecordType>