force-app/main/default/objects/Acompanante__c/recordTypes/EV_Evento.recordType-meta.xml
<RecordType>
    <fullName>EV_Evento</fullName>
    <active>true</active>
    <description>Acompañantes de eventos</description>
    <label>Evento</label>
</RecordType>